# openjpeg-sys

./: .gitignore  Cargo.toml  README.md  generate.sh
.github/workflows/: ci.yml
codegen/: Cargo.toml
codegen/src/: main.rs
config/: opj_config.h  opj_config_private.h
src/: ffi.rs  lib.rs
