[package]
name = "openjpeg-sys-codegen"
description = "Binding generator project for openjpeg-sys"
publish = false
version = "0.0.0"
edition = "2021"

[dependencies]
bindgen = "0.71.1"

[dependencies.doxygen-bindgen]
git = "https://github.com/Enet4/doxygen-bindgen"
branch = "imp/new_paragraph_after_html"
